cube css approach

--- a/index.html
+++ b/index.html
@@ -1,1 +1,44 @@
-<h1>Hi, I am Joe Tripodi.</h1>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, intial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <title> Joe Tripodi </title>
+    <link rel="stylesheet" media="all" href="css/global.css" />
+  </head>
+  <body>
+    <header>
+    </header>
+    <main class="flow">
+      <article class="[ flow ] [ wrapper ]">
+        <div class="region">
+          <h1>Hello, I am Joe Tripodi, a Software Engineer</h1>
+        </div>
+      </article>
+      <article class="region flow background-neutral">
+        <div class="[ wrapper ]">
+          <h2>Past Experiece</h2>
+          <ul class="grid" role="list">
+            <li class="[ flow ] [ card ]">
+              <h3>Saab Australia</h3>
+              <p>Software Integration Engineer</p>
+              <p>Software Engineer</p>
+              <p>Time critical software</p>
+            </li>
+            <li class="[ flow ] [ card ]">
+              <h3>Graycorp</h3>
+              <p>Scrum Master</p>
+              <p>Full-Stack Web Developer</p>
+              <p>Vue.js, C#, SQL</p>
+            </li>
+            <li class="[ flow ] [ card ]">
+              <h3>Shopify</h3>
+              <p>I helped improve a friends Shopfiy eCommerce web-shop.</p>
+              <p>Improved product bundles to keep track of inventory levels</p>
+            </li>
+          </ul>
+        </div>
+      </article>
+    </main>
+  </body>
+</html>
