--- a/index.html
+++ b/index.html
@@ -1,44 +1,31 @@
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, intial-scale=1.0" />
-    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title> Joe Tripodi </title>
-    <link rel="stylesheet" media="all" href="css/global.css" />
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Joe Tripodi</title>
+    <link rel="stylesheet" media="all" href="css/global.css">
   </head>
   <body>
     <header>
     </header>
-    <main class="flow">
-      <article class="[ flow ] [ wrapper ]">
-        <div class="region">
-          <h1>Hello, I am Joe Tripodi, a Software Engineer</h1>
-        </div>
+    <main class="wrapper flow">
+      <article class="flow">
+        <h1>Hello, my name is Joe Tripodi</h1>
+        <p>I am <strong class="text-highlight">Software Engineer</strong> with a passion for <strong class="text-highlight">web development.</strong></p>
+        <p>This site is used as a home base for myself and as a place for people to come and see what I am up to.</p>
+        <p>It will also house any blog articles I do decide to write</p>
       </article>
-      <article class="region flow background-neutral">
-        <div class="[ wrapper ]">
-          <h2>Past Experiece</h2>
-          <ul class="grid" role="list">
-            <li class="[ flow ] [ card ]">
-              <h3>Saab Australia</h3>
-              <p>Software Integration Engineer</p>
-              <p>Software Engineer</p>
-              <p>Time critical software</p>
-            </li>
-            <li class="[ flow ] [ card ]">
-              <h3>Graycorp</h3>
-              <p>Scrum Master</p>
-              <p>Full-Stack Web Developer</p>
-              <p>Vue.js, C#, SQL</p>
-            </li>
-            <li class="[ flow ] [ card ]">
-              <h3>Shopify</h3>
-              <p>I helped improve a friends Shopfiy eCommerce web-shop.</p>
-              <p>Improved product bundles to keep track of inventory levels</p>
-            </li>
-          </ul>
-        </div>
+      <article class="flow">
+        <h2>Projects</h2>
+        <ul role="list">
+          <li>Fine's Application</li>
+          <li>This website</li>
+          <li>URL Blocker</li>
+        </ul>
       </article>
     </main>
-  </body>
+ </body>
 </html>
+
+
