Updated fonts and main page

--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8">
@@ -6,26 +7,47 @@
     <title>Joe Tripodi</title>
     <link rel="stylesheet" media="all" href="css/global.css">
   </head>
-  <body>
+  <body class="wrapper">
     <header>
+      <div class="wrapper">
+        <div class="header__inner">
+          <a>An Image</a>
+          <div class="header__navigation">
+            <nav> 
+              <ul class="nav" role="list">
+                <li>
+                  <a class="nav-link" href="#">Home</a>
+                </li>
+                <li>
+                  <a class="nav-link" href="#">About</a>
+                </li>
+                <li>
+                  <a class="nav-link" href="#">Blog</a>
+                </li>
+              </ul>
+            </nav>
+          </div>
+        </div>
+      </div>
     </header>
-    <main class="wrapper flow">
-      <article class="flow">
-        <h1>Hello, my name is Joe Tripodi</h1>
-        <p>I am <strong class="text-highlight">Software Engineer</strong> with a passion for <strong class="text-highlight">web development.</strong></p>
-        <p>This site is used as a home base for myself and as a place for people to come and see what I am up to.</p>
-        <p>It will also house any blog articles I do decide to write</p>
+    <main class="flow">
+      <article class="wrapper flow center-text">
+        <h1>Hey, I'm <span class="text-highlight">Joe</span></h1>
+        <p>
+        I am a <strong class="text-highlight">developer</strong> with a 
+        passion for <strong class="text-highlight">web development.</strong>
+        Whether it be a small side project, an E-Commerce store for a friend,
+        or even updates to existing sites, I am interested.
+        </p>
+        <p>
+        This site is used as a home base for myself and as a place for
+        people to come and see what I am up to. It is also where I keep all
+        of my blog posts.
+        </p>
       </article>
       <article class="flow">
-        <h2>Projects</h2>
-        <ul role="list">
-          <li>Fine's Application</li>
-          <li>This website</li>
-          <li>URL Blocker</li>
-        </ul>
       </article>
     </main>
- </body>
+  </body>
 </html>
-
 
